manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: emart
---
apiVersion: v1
kind: Namespace
metadata:
  name: micros
---
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
---
apiVersion: v1
kind: Namespace
metadata:
  name: mysql
